- TW-1454 Redundant dependency should not stop modification  (thanks to Tomas
          Babej).
- TW-1475 task config expands values with unnecessary spaces (thanks to Tomas
          Babej).
- TW-1480 Weird behaviour on redundant filter beginning with number (thanks to
          Tomas Babej).
- TW-1488 You have more urgent tasks (thanks to Stefan Betz, Denis Kasak).
- TW-1527 Extra spaces added around slashes (thanks to Renato Alves).
- TW-1529 Parser incorrectly inserting spaces into task description (thanks to
          David Brenner).
- TW-1572 Better urgency inheritance (thanks to Jens Erat).
- TW-1575 `task log` mangles URLs when quoted (thanks to Luke Macken).
- TW-1600 Filtering "regressions"(?) in task-2.4.3, task-2.4.4 (thanks to Ralph
          Bean).
- TW-1609 In 'urgency<10', 10 is interpreted as an ID (thanks to Wim Schuermann).
- TW-1612 Spurious whitespace added in task descriptions around certain symbols
          (thanks to Denis Kasak).
- TW-1615 Japanese translation for Taskwarrior(150513) (thanks to ribbon).
- TW-1617 Can't search for multi-word project (thanks to Audrey Easterday).
- TW-1632 Japanese translation for Taskwarrior(150713) (thanks to ribbon).
- Prevent potential task duplication during import for non-pending tasks.
- Show the active context in "context list", if any is active.
- Fix "task edit" dropping annotation text after newlines.
- Removed obsolete script 'context'.
- Fix "project" verbosity info not showing without "footnote" being manually
  enabled.
- Internal plumbing:  Use variadic templates for format(), reducing code bloat
  and enabling more flexible use of the function.
- Enable "task sync" support by default.  "cmake -DENABLE_SYNC=OFF" allows
  disabling it and building Taskwarrior without libgnutls available.
- An attempt to add or remove a virtual tag is now an error (thanks to Scott M).
- json.array now defaults to "on", making "export" output a JSON array that