@@ -21,6 +21,8 @@
 - TW-1480 Weird behaviour on redundant filter beginning with number (thanks to
           Tomas Babej).
 - TW-1488 You have more urgent tasks (thanks to Stefan Betz, Denis Kasak).
+- TW-1511 Project titles not properly parsed if they contain hyphens (thanks to
+          Leon Feng, Blake Sweeney, Dylan Mikus).
 - TW-1527 Extra spaces added around slashes (thanks to Renato Alves).
 - TW-1529 Parser incorrectly inserting spaces into task description (thanks to
           David Brenner).
